--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/FopefoluwaIkufisile" target="_blank">Ikufisile Fopefoluwa</a>.
+    Coded by <a href="https://github.com/FopefoluwaIkufisile" target="_blank">Ikufisile Fopefoluwa </a>. &copy; <span id="Year"></span> 
+   
   </div>
   <script src="index.js"></script>
 </body>
